Fixed the spartan font, wrong font issue, and styled the main planet body content

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,8 +13,14 @@
 }
 @font-face {
   font-family: 'Spartan';
-  src: url('../fonts/LeagueSpartan-VariableFont_wght.ttf');
+  src: url('../fonts/Spartan-Regular.ttf');
   font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Spartan';
+  src: url('../fonts/Spartan-Bold.ttf');
+  font-weight: 700;
   font-style: normal;
 }
 :root {
@@ -38,7 +44,8 @@ html {
 body {
   font-family: 'Spartan', sans-serif;
   font-size: 0.7rem;
-  font-weight: 500;
+  font-weight: 400;
+  font-style: normal;
   line-height: 1.25rem;
   background-image: url('../images/background-stars.svg');
   background-size: cover;
@@ -53,6 +60,11 @@ body {
   position: absolute;
   width: 1440px;
   height: 1024px;
+  top: 0;
+  left: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
   display: none;
 }
 #desktop-overlay {
@@ -62,26 +74,32 @@ body {
   top: 0;
   left: 0;
   z-index: 100;
-  opacity: 0.4;
+  opacity: 1;
 }
 /* End testing */
 
 h1 {
   font-family: 'Antonio', sans-serif;
+  text-transform: uppercase;
   font-size: 4rem;
+  font-weight: 400;
+  letter-spacing: 0.3px;
   line-height: 5.15rem;
+  margin-bottom: 0.35em;
 }
 h2 {
   font-family: 'Antonio', sans-serif;
   font-size: 2rem;
+  font-weight: 400;
   line-height: 2.6rem;
   letter-spacing: -1.5px;
 }
 h3 {
   font-size: 0.6rem;
-  line-height: 1.25rem;
-  font-weight: 700;
-  letter-spacing: 2.6px;
+  line-height: 1.75rem;
+  font-weight: 600;
+  opacity: 0.85;
+  letter-spacing: 2.5px;
   text-transform: uppercase;
   display: inline;
 }
@@ -93,7 +111,7 @@ h4 {
   text-transform: uppercase;
 }
 button {
-  background: none;
+  background-color: transparent;
   color: inherit;
   text-align: left;
 }
@@ -136,11 +154,18 @@ button.btn-small:hover {
 .body-padding {
   padding-inline: 1.6rem;
 }
+.m-block-tall {
+  margin-block: 2.8rem;
+}
 .fill-height {
   height: 100%;
 }
+.nav-bottom-margin {
+  margin-bottom: 3.6rem;
+}
 
 /* Component level styles */
+/* NAV */
 nav {
   min-height: 4.25rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
@@ -191,12 +216,65 @@ nav {
   border-color: red;
 }
 
+/* MAIN */
+main {
+  width: min(55.5rem, 100%);
+  margin: auto;
+}
+main .grid-container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr auto;
+  align-items: end;
+}
+.hero-image {
+  grid-row: 1 / 3;
+  width: 31.5rem;
+  height: 31.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-content {
+  max-width: 350px;
+  margin-left: auto;
+}
+.planet-information {
+  aspect-ratio: 2 / 1;
+  font-size: 0.68rem;
+  opacity: 0.8;
+  letter-spacing: 0.15px;
+  line-height: 1.2rem;
+}
+.planet-menu {
+  max-width: 350px;
+  margin-left: auto;
+  padding-block: 1.7rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  align-items: center;
+  counter-reset: count 0;
+}
+.planet-menu button {
+  counter-increment: count 1;
+}
+.planet-menu button::before {
+  content: '0' counter(count, decimal);
+  font-size: 0.55rem;
+  letter-spacing: 2.571px;
+  margin-left: 1.4rem;
+  margin-right: 1.25rem;
+  opacity: 0.5;
+}
+
 /* Element level styles */
 .logo {
+  font-family: 'Antonio', sans-serif;
   font-size: 1.4rem;
   line-height: normal;
-  font-weight: 400;
-  letter-spacing: -1.5px;
+  font-weight: 500;
+  letter-spacing: -1.1px;
   text-transform: uppercase;
 }
 .wiki-container {
@@ -208,21 +286,3 @@ nav {
   color: inherit;
   font-weight: 700;
 }
-
-/* Used to test the counter for the buttons */
-.planet-menu {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-  counter-reset: count 0;
-}
-.planet-menu button {
-  counter-increment: count 1;
-}
-.planet-menu button::before {
-  content: '0' counter(count, decimal);
-  margin-inline: 1rem;
-  opacity: 0.5;
-}
-/* End test */
